force-app/main/default/objects/RD_Output_OW_Translation__c/RD_Output_OW_Translation__c.object-meta.xml
<CustomObject>
    <label>RD Output OW Translation</label>
    <nameField>
        <label>RD Output OW Translation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Output OW Translation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>