force-app/main/default/objects/RD_Output_OW_Translation__c/fields/Comp__c.field-meta.xml
<CustomField>
    <fullName>Comp__c</fullName>
    <label>Comp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>