force-app/main/default/objects/RD_Output_OW_Translation__c/fields/TextOpp1__c.field-meta.xml
<CustomField>
    <fullName>TextOpp1__c</fullName>
    <label>TextOpp1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>