force-app/main/default/objects/RD_Output_OW_Translation__c/fields/TextOpp2__c.field-meta.xml
<CustomField>
    <fullName>TextOpp2__c</fullName>
    <label>TextOpp2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>