force-app/main/default/objects/RD_Output_OW_Translation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comp__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>TextOpp1__c</columns>
    <columns>TextOpp2__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Num1__c</columns>
    <columns>Num2__c</columns>
    <columns>NumOpp1__c</columns>
    <columns>NumOpp2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>